--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,13 +15,13 @@
         tools:targetApi="31">
         <activity
             android:name=".NewTraceabilityActivity"
-            android:exported="true" />
+            android:exported="false" />
         <activity
             android:name=".HomeActivity"
-            android:exported="true" />
+            android:exported="false" />
         <activity
             android:name=".ProfileActivity"
-            android:exported="true" />
+            android:exported="false" />
         <activity
             android:name=".SignInActivity"
             android:exported="true">
@@ -33,7 +33,7 @@
         </activity>
         <activity
             android:name=".SignUpActivity"
-            android:exported="true" />
+            android:exported="false" />
         <activity
             android:name=".ProfileEditActivity"
             android:exported="true" />
