--- a/settings.gradle
+++ b/settings.gradle
@@ -1,8 +1,10 @@
 pluginManagement {
     repositories {
+        gradlePluginPortal()
         google()
         mavenCentral()
-        gradlePluginPortal()
+        jcenter()
+        maven { url 'https://jitpack.io' }
     }
 }
 dependencyResolutionManagement {
@@ -10,7 +12,8 @@ dependencyResolutionManagement {
     repositories {
         google()
         mavenCentral()
-        maven {url "https://jitpack.io"}
+        jcenter()
+        maven { url 'https://jitpack.io' }
     }
 }
 rootProject.name = "LoginAndSignUpFirebase"
