--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,8 +3,10 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.CAMERA"/>
+    <uses-permission android:name="android.permission.CAMERA" />
+
     <uses-feature android:name="android.hardware.camera" />
+
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission
         android:name="android.permission.WRITE_EXTERNAL_STORAGE"
@@ -20,6 +22,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.LoginAndSignUpFirebase"
         tools:targetApi="tiramisu">
+        <activity
+            android:name=".AddTraceabilityActivity"
+            android:exported="false" />
         <activity
             android:name=".ScanQRActivity"
             android:exported="false" />
