--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,8 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.CAMERA" />
-    <uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE"
+    <uses-permission
+        android:name="android.permission.MANAGE_EXTERNAL_STORAGE"
         tools:ignore="ScopedStorage" />
 
     <uses-feature android:name="android.hardware.camera" />
@@ -24,6 +25,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.LoginAndSignUpFirebase"
         tools:targetApi="tiramisu">
+        <activity
+            android:name=".SummaryActivity"
+            android:exported="false" />
         <activity
             android:name=".AddTraceabilityActivity"
             android:exported="false" />
